added some audiobook and category endpoints
