# models.py
@@ -2,6 +2,19 @@ from flask_sqlalchemy import SQLAlchemy
 
 db = SQLAlchemy()
 
+
+class User(db.Model):
+    __tablename__ = 'users'
+
+    id = db.Column(db.Integer, primary_key=True)
+    username = db.Column(db.String(100), nullable=True)
+    email = db.Column(db.String(200), nullable=True)
+    hashed_password = db.Column(db.String(200), nullable=True)
+    role = db.Column(db.String(45), nullable=True)
+
+    # # Relationship with UserLibrary
+    # library = db.relationship('UserLibrary', backref='users', lazy=True)
+
 class Category(db.Model):
     __tablename__ = 'category'
 
@@ -17,4 +30,16 @@ class Audiobook(db.Model):
     category_id = db.Column(db.Integer, db.ForeignKey('category.id'), nullable=True)
 
     # Relationship (optional, if you want to use it in queries)
-    category = db.relationship('Category', backref=db.backref('audiobooks', lazy=True))
+    category = db.relationship('Category', backref='audiobook', lazy=True)
+
+
+# class UserLibrary(db.Model):
+#     __tablename__ = 'user_library'
+
+#     id = db.Column(db.Integer, primary_key=True)
+#     status = db.Column(db.String(200), nullable=True)
+#     user_id = db.Column(db.Integer, db.ForeignKey('users.id'), nullable=True)
+#     audiobook_id = db.Column(db.Integer, db.ForeignKey('audiobook.id'), nullable=True)
+
+#     # Relationship with UserLibrary
+#     library_entries = db.relationship('UserLibrary', backref='audiobook', lazy=True)
